[package]
name = "ndrt-web"
version = "0.1.0"
authors = ["Moritz Kneilmann <moritz.kneilmann@gmx.de>"]

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = false # does not work on my mac

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"
ndrt-lib = { path = "../ndrt-lib" }


[dependencies.web-sys]
version = "0.3.47"
features = [
  "CanvasRenderingContext2d",
  "HtmlCanvasElement",
  "ImageData"
]
